--- a/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj.filters
+++ b/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\FSM">
+      <UniqueIdentifier>{645ce87d-b40c-46e1-97c6-480e519e01d9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\FSM">
+      <UniqueIdentifier>{043d8de9-4991-4da1-9917-59c46b682268}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
