--- a/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj
+++ b/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj
@@ -137,11 +137,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Fsm.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Debug.h" />
+    <ClInclude Include="Fsm.h" />
     <ClInclude Include="Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
