--- a/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj.filters
+++ b/GameEng2-Lab3/Games-Engineering-II-SDL-StarterKit/Games-Engineering-II-SDL-StarterKit.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Fsm.cpp">
+      <Filter>Source Files\FSM</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Debug.h">
@@ -34,6 +37,9 @@
     </ClInclude>
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Fsm.h">
+      <Filter>Header Files\FSM</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
